Enhance index.html with SEO meta tags
Added meta tags for SEO and responsive design.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="description" content="Free Meeting Cost Calculator: Discover how much your meetings really cost. Input duration, attendees, and salaries to calculate meeting expenses instantly.">
+<meta name="keywords" content="meeting cost calculator, business expenses, productivity tools, meeting calculator, cost analysis">
+<meta property="og:title" content="Meeting Cost Calculator - Calculate Your Meeting Expenses">
+<meta property="og:description" content="Discover the true cost of your meetings with our free calculator.">
+<meta property="og:type" content="website">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meeting Cost Calculator | Calculate Your Meeting Expenses</title>
     <style>
+
+        @media (max-width: 768px) {
+    .container {
+        margin: 10px;
+        border-radius: 10px;
+    }
+    .header h1 {
+        font-size: 22px;
+    }
+    input, select, button {
+        font-size: 16px; /* Prevents zoom on iOS */
+    }
+}
         * {
             margin: 0;
             padding: 0;
