--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
             input, select, button { font-size: 16px; }
         }
     </style>
+    <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKPJ71KHHZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-YOUR_MEASUREMENT_ID');
+</script>
+
+
 </head>
 <body>
     <div class="container">
